<?xml version="1.0"?>
<package format="2">
  <name>grid_map_demos</name>
  <version>1.1.3</version>
  <description>Demo nodes to demonstrate the usage of the grid map library.</description>
  <maintainer email="pfankhauser@ethz.ch">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/ethz-asl/grid_map</url>
  <url type="bugtracker">http://github.com/ethz-asl/grid_map/issues</url>
  <author email="pfankhauser@ethz.ch">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
