<?xml version="1.0"?>
<package format="2">
  <name>grid_map_filters</name>
  <version>1.6.0</version>
  <description>Processing grid maps as a sequence of ROS filters.</description>
  <maintainer email="pfankhauser@ethz.ch">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/ethz-asl/grid_map</url>
  <url type="bugtracker">http://github.com/ethz-asl/grid_map/issues</url>
  <author email="pfankhauser@ethz.ch">Péter Fankhauser</author>
  <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>filters</depend>
  <export>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
