<?xml version="1.0"?>
<package>
  <name>grid_map_lib</name>
  <version>0.1.0</version>
  <description>General library for handling of grid maps.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/ethz-asl/grid_map</url>
  <url type="bugtracker">http://github.com/ethz-asl/grid_map/issues</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
</package>
