<?xml version="1.0"?>
<package format="2">
  <name>grid_map_loader</name>
  <version>1.6.1</version>
  <description>Loading and publishing grid maps from bag files.</description>
  <maintainer email="pfankhauser@anybotics.com">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
</package>
